# nonebot-plugin-antiinsult

./: LICENSE  README.md  pyproject.toml
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: python-publish.yml
nonebot_plugin_antiinsult/: __init__.py  config.py  curse.json  flymo.json
